# striped-sw

./: .gitignore  CMakeLists.txt  Readme.md  common.hpp  rvv-ssw.hpp  rvv-traits.hpp  ssw.hpp  test.cpp  testv.cpp
.github/workflows/: ci.yml
include/ssw/: common.hpp  rvv-traits.hpp  ssw.hpp
tests/: test.cpp  test2.cpp
